--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@
                         <p>creative tagline here</p>
                     </a>
                 </div>
-                <ul class="mob-container">
+                <div class="burger">
+                    Возьми меня :-)
+                </div>
+                <ul class="mob-container hidden">
                     <li>Контактная информация
                         <ul class="mob-info">
                             <li><a href="tel:+123 4567 8900" class="phone">
@@ -100,6 +103,7 @@
                     </li>
                 </ul>
             </div>
+        </div>
         </header>
         <div class="wr-content">
             <h1>Start Your Greatest</h1>
@@ -283,8 +287,7 @@
                     <h2>Trusted Since 2001</h2>
                     <h3>We are Travel Agent</h3>
                 </div>
-                <div class="
-                tourselectiontransport">
+                <div class="tourselectiontransport">
                     <div class="flight">
                         <img src="./media/main6/plane.png"></img>Flight
                     </div>
@@ -292,9 +295,7 @@
                         <img src="./media/main6/car.png"></img>Cab
                     </div>
                     <div>
-                        <a href="#">
-                            <img src="./media/main6/building.png">Hotel
-                        </a>
+                        <img src="./media/main6/building.png">Hotel
                     </div>
                 </div>
                 <div>
