--- a/index.html
+++ b/index.html
@@ -64,14 +64,19 @@
             <div class="wr-mob">
                 <div class="mob-logo">
                     <div class="burger">
-                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="32px" id="Layer_1" style="enable-background:new 0 0 32 32;" version="1.1" viewBox="0 0 32 32" width="32px" xml:space="preserve"><path d="M4,10h24c1.104,0,2-0.896,2-2s-0.896-2-2-2H4C2.896,6,2,6.896,2,8S2.896,10,4,10z M28,14H4c-1.104,0-2,0.896-2,2  s0.896,2,2,2h24c1.104,0,2-0.896,2-2S29.104,14,28,14z M28,22H4c-1.104,0-2,0.896-2,2s0.896,2,2,2h24c1.104,0,2-0.896,2-2  S29.104,22,28,22z"/></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="32px"
+                            id="Layer_1" style="enable-background:new 0 0 32 32;" version="1.1" viewBox="0 0 32 32"
+                            width="32px" xml:space="preserve">
+                            <path
+                                d="M4,10h24c1.104,0,2-0.896,2-2s-0.896-2-2-2H4C2.896,6,2,6.896,2,8S2.896,10,4,10z M28,14H4c-1.104,0-2,0.896-2,2  s0.896,2,2,2h24c1.104,0,2-0.896,2-2S29.104,14,28,14z M28,22H4c-1.104,0-2,0.896-2,2s0.896,2,2,2h24c1.104,0,2-0.896,2-2  S29.104,22,28,22z" />
+                        </svg>
                     </div>
                     <a class="logo">
                         <img src="./media/main1/nav/logo.png" src="icon-logo">
                         <p>creative tagline here</p>
                     </a>
                 </div>
-              
+
                 <ul class="mob-container hidden">
                     <li>Контактная информация
                         <ul class="mob-info">
@@ -103,8 +108,6 @@
                         </ul>
                     </li>
                 </ul>
-            </div>
-        </div>
         </header>
         <div class="wr-content">
             <h1>Start Your Greatest</h1>
@@ -114,6 +117,7 @@
                 magna aliqua. Ut enim ad minim veniam.
             </p>
             <a href="#">click here</a>
+        </div>
         </div>
     </section>
     <section class="wr-search">
@@ -147,6 +151,7 @@
                 </div>
             </form>
         </div>
+    </div>
     </section>
     <section class="wr-aboutus">
         <img class="img-main-left" src="./media/main3/main-left.jpg">
@@ -475,8 +480,7 @@
                 <div class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur.”</div>
+                    aliquip ex ea commodo consequat.”</div>
                 <div class="rating-area">
                     <input type="radio" id="star-5" name="rating" value="5">
                     <label for="star-5" title="Оценка «5»"></label>
