--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Exploore</title>
 
     <link rel="stylesheet" href="slick/slick.css">
     <link rel="stylesheet" href="slick/slick-theme.css">
@@ -39,14 +39,14 @@
                             <a href="#">Login</a>
                         </div>
                         <div class="sign-up">
-                            <img src="./media/main1/nav/key.png" src="icon-key">
+                            <img src="./media/main1/nav/key.png" alt="icon-key">
                             <a href="./second-page/folder.html">Sign up</a>
                         </div>
                     </div>
                 </div>
                 <div class="nav-menu">
                     <a class="logo">
-                        <img src="./media/main1/nav/logo.png" src="icon-logo">
+                        <img src="./media/main1/nav/logo.png" alt="icon-logo">
                         <p>creative tagline here</p>
                     </a>
                     <nav class="nav">
@@ -56,7 +56,7 @@
                             <li><a href="#">Discount</a></li>
                             <li><a href="#">About</a></li>
                             <li><a href="#">Blog</a></li>
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="#contacts">Contact</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -154,7 +154,8 @@
     </div>
     </section>
     <section class="wr-aboutus">
-        <img class="img-main-left" src="./media/main3/main-left.jpg">
+        <img class="img-main-left" src="./media/main3/main-left.jpg" alt="
+        background">
         <div class="container">
             <h2>Trusted Since 2001</h2>
             <h3>We are Exploore</h3>
@@ -164,19 +165,19 @@
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
             </p>
             <ul class="content-aboutus">
-                <li><img src="./media/main3/check.png">
+                <li><img src="./media/main3/check.png" alt="img-check">
                     <div>Lorem ipsum dolor sit amet,
                         consectetur adipiscing elit,
                         sed do eiusmod.
                     </div>
                 </li>
-                <li><img src="./media/main3/check.png">
+                <li><img src="./media/main3/check.png" alt="img-check">
                     <div>Lorem ipsum dolor sit amet,
                         consectetur adipiscing elit,
                         sed do eiusmod.
                     </div>
                 </li>
-                <li><img src="./media/main3/check.png">
+                <li><img src="./media/main3/check.png" alt="img-check">
                     <div>Lorem ipsum dolor sit amet,
                         consectetur adipiscing elit,
                         sed do eiusmod.
@@ -192,7 +193,7 @@
             <ul class="services">
                 <div class="info-about">
                     <li>
-                        <div class="icon-img"><img src="./media/main4/plane.png"></div>
+                        <div class="icon-img"><img src="./media/main4/plane.png" alt="img-plane"></div>
                         <div>
                             <p>Lorem Ipsum Dolor Sit</p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
@@ -200,7 +201,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="icon-img"><img src="./media/main4/building.png"></div>
+                        <div class="icon-img"><img src="./media/main4/building.png" alt="img-building"></div>
                         <div>
                             <p>Lorem Ipsum Dolor Sit</p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
@@ -208,7 +209,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="icon-img"><img src="./media/main4/fork-knife.png"></div>
+                        <div class="icon-img"><img src="./media/main4/fork-knife.png" alt="img-fork-knife"></div>
                         <div>
                             <p>Lorem Ipsum Dolor Sit</p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
@@ -218,7 +219,7 @@
                 </div>
                 <div class="info-about">
                     <li>
-                        <div class="icon-img"><img src="./media/main4/train.png"></div>
+                        <div class="icon-img"><img src="./media/main4/train.png" alt="img-train"></div>
                         <div>
                             <p>Lorem Ipsum Dolor Sit</p>
                             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit,
@@ -226,7 +227,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="icon-img"><img src="./media/main4/bike.png"></div>
+                        <div class="icon-img"><img src="./media/main4/bike.png" alt="img-bike"></div>
                         <div>
                             <p>Lorem Ipsum Dolor Sit</p>
                             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit,
@@ -234,7 +235,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="icon-img"><img src="./media/main4/eyes.png "></div>
+                        <div class="icon-img"><img src="./media/main4/eyes.png" alt="img-eyes"></div>
                         <div>
                             <p>Lorem Ipsum Dolor Sit</p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
@@ -250,36 +251,36 @@
             <h3>We are Travel Agent</h3>
             <div class="tourcost">
                 <div class="lowbudget">
-                    <div class="icon"><img src="./media/main5/car.png"></div>
+                    <div class="icon"><img src="./media/main5/car.png" alt="img-car"></div>
                     <p>Low Budget Trip</p>
                     <div class="cost"><span>500$</span></div>
                     <ul>
-                        <li><img src="./media/main5/check.png"> Lorem ipsum dolor</li>
-                        <li><img src="./media/main5/check.png"> Sit amet consect</li>
-                        <li><img src="./media/main5/check.png"> Eturadipiscing elit</li>
-                        <li><img src="./media/main5/check.png"> Psum dolor</li>
+                        <li><img src="./media/main5/check.png" alt="img-check"> Lorem ipsum dolor</li>
+                        <li><img src="./media/main5/check.png" alt="img-check"> Sit amet consect</li>
+                        <li><img src="./media/main5/check.png" alt="img-check"> Eturadipiscing elit</li>
+                        <li><img src="./media/main5/check.png" alt="img-check"> Psum dolor</li>
                     </ul>
                 </div>
                 <div class="midbudget">
-                    <div class="icon"><img src="./media/main5/train.png"></div>
+                    <div class="icon"><img src="./media/main5/train.png" alt="train"></div>
                     <p>Mid Budget Trip</p>
                     <div class="cost">800$</div>
                     <ul>
-                        <li><img src="./media/main5/check.png"> Lorem ipsum dolor</li>
-                        <li><img src="./media/main5/check.png"> Sit amet consect</li>
-                        <li><img src="./media/main5/check.png"> Eturadipiscing elit</li>
-                        <li><img src="./media/main5/check.png"> Psum dolor</li>
+                        <li><img src="./media/main5/check.png" alt="img-check"> Lorem ipsum dolor</li>
+                        <li><img src="./media/main5/check.png" alt="img-check"> Sit amet consect</li>
+                        <li><img src="./media/main5/check.png" alt="img-check"> Eturadipiscing elit</li>
+                        <li><img src="./media/main5/check.png" alt="img-check"> Psum dolor</li>
                     </ul>
                 </div>
                 <div class="highbudget">
-                    <div class="icon"><img src="./media/main5/plane.png"></div>
+                    <div class="icon"><img src="./media/main5/plane.png" alt="img-plane"></div>
                     <p>High Budget Trip</p>
                     <div class="cost">1000$</div>
                     <ul>
-                        <li><img src="./media/main5/check.png"> Lorem ipsum dolor</li>
-                        <li><img src="./media/main5/check.png"> Sit amet consect</li>
-                        <li><img src="./media/main5/check.png"> Eturadipiscing elit</li>
-                        <li><img src="./media/main5/check.png"> Psum dolor</li>
+                        <li><img src="./media/main5/check.png" alt="img-check"> Lorem ipsum dolor</li>
+                        <li><img src="./media/main5/check.png" alt="img-check"> Sit amet consect</li>
+                        <li><img src="./media/main5/check.png" alt="img-check"> Eturadipiscing elit</li>
+                        <li><img src="./media/main5/check.png" alt="img-check"> Psum dolor</li>
                     </ul>
                 </div>
             </div>
@@ -287,7 +288,7 @@
     </section>
     <section class="wr-tourselection">
         <div class="container">
-            <img class="img-left" src="./media/main6/main-left.jpg">
+            <img class="img-left" src="./media/main6/main-left.jpg" alt="img-background">
             <div class="tourselection">
                 <div>
                     <h2>Trusted Since 2001</h2>
@@ -295,13 +296,13 @@
                 </div>
                 <div class="tourselectiontransport">
                     <div class="flight">
-                        <img src="./media/main6/plane.png"></img>Flight
+                        <img src="./media/main6/plane.png" alt="img-plane"></img>Flight
                     </div>
                     <div class="cab">
-                        <img src="./media/main6/car.png"></img>Cab
+                        <img src="./media/main6/car.png" alt="img-car"></img>Cab
                     </div>
                     <div>
-                        <img src="./media/main6/building.png">Hotel
+                        <img src="./media/main6/building.png" alt="img-building">Hotel
                     </div>
                 </div>
                 <div>
@@ -322,7 +323,7 @@
             <h3>Awesome Tours</h3>
             <div class="tour">
                 <div class="first-tour">
-                    <img src="./media/main7/first.jpg">
+                    <img src="./media/main7/first.jpg" alt="img-tour">
                     <div class="info-tour">
                         <p class="trip-duration">7 Day + 6 Night</p>
                         <p class="
@@ -334,7 +335,7 @@
                     </div>
                 </div>
                 <div class="second-tour">
-                    <img src="./media/main7/second.jpg">
+                    <img src="./media/main7/second.jpg" alt="img-tour">
                     <div class="info-tour">
                         <p class="trip-duration">7 Day + 6 Night</p>
                         <p class="
@@ -347,7 +348,7 @@
                     </div>
                 </div>
                 <div class="third-tour">
-                    <img src="./media/main7/third.jpg">
+                    <img src="./media/main7/third.jpg" alt="img-tour">
                     <div class="info-tour">
                         <p class="trip-duration">7 Day + 6 Night</p>
                         <p class="
@@ -368,7 +369,7 @@
             <div class="
             directions">
                 <div>
-                    <img src="./media/main8/first.jpg" alt="">
+                    <img src="./media/main8/first.jpg" alt="img-tour">
                     <div class="info">
                         <a href="#">Click here</a>
                         <p class="headin-first">Lorem Ipsum Dolor</p>
@@ -377,7 +378,7 @@
                     </div>
                 </div>
                 <div>
-                    <img src="./media/main8/second.jpg" alt="">
+                    <img src="./media/main8/second.jpg" alt="img-tour">
                     <div class="info">
                         <a href="./grid-page/folder.html">Click here</a>
                         <p class="headin-first">Lorem Ipsum Dolor</p>
@@ -386,7 +387,7 @@
                     </div>
                 </div>
                 <div>
-                    <img src="./media/main8/third.jpg" alt="">
+                    <img src="./media/main8/third.jpg" alt="img-tour">
                     <div class="info">
                         <a href="#">Click here</a>
                         <p class="headin-first">Lorem Ipsum Dolor</p>
@@ -403,11 +404,11 @@
             <h4>7 Day + 6 Night</h4>
             <div class="img">
                 <div>
-                    <img src="./media/main9/plane.png">Flight</div>
+                    <img src="./media/main9/plane.png" alt="img-plane">Flight</div>
                 <div>
-                    <img src="./media/main9/building.png">Hotel</div>
+                    <img src="./media/main9/building.png" alt="img-building">Hotel</div>
                 <div>
-                    <img src="./media/main9/car.png">Transport</div>
+                    <img src="./media/main9/car.png" alt="img-car">Transport</div>
             </div>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                 labore et dolore magna aliqua.</p>
@@ -439,7 +440,7 @@
                     <label for="star-1" title="Оценка «1»"></label>
                 </div>
                 <div class="wr-castomer">
-                    <img src="./media/main10/castomer.png">
+                    <img src="./media/main10/castomer.png" alt="img-castomer">
                     <div class="castomer">
                         <p class="name">John Smith</p>
                         <p class="status">Solo Traveller</p>
@@ -467,7 +468,7 @@
                     <label for="star-1" title="Оценка «1»"></label>
                 </div>
                 <div class="wr-castomer">
-                    <img src="./media/main10/castomer.png">
+                    <img src="./media/main10/castomer.png" alt="img-castomer">
                     <div class="castomer">
                         <p class="name">John Smith</p>
                         <p class="status">Solo Traveller</p>
@@ -494,7 +495,7 @@
                     <label for="star-1" title="Оценка «1»"></label>
                 </div>
                 <div class="wr-castomer">
-                    <img src="./media/main10/castomer.png">
+                    <img src="./media/main10/castomer.png" alt="img-castomer">
                     <div class="castomer">
                         <p class="name">John Smith</p>
                         <p class="status">Solo Traveller</p>
@@ -503,7 +504,7 @@
             </div>
         </div>
     </section>
-    <section class="wr-contact">
+    <section class="wr-contact" id="contacts">
         <div class="container">
             <div class="contact-us">
                 <div class="top-info">
@@ -547,31 +548,31 @@
                 <div class="social-infa">
                     <a href="#">
                         <div>
-                            <img src="./media/main11/facebook-1.png"></div>
+                            <img src="./media/main11/facebook-1.png" alt="img-facebook"></div>
                     </a>
                     <a href="#">
                         <div>
-                            <img src="./media/main11/google-2.png"></div>
+                            <img src="./media/main11/google-2.png" alt="img-google"></div>
                     </a>
                     <a href="#">
                         <div>
-                            <img src="./media/main11/vk-3.png"></div>
+                            <img src="./media/main11/vk-3.png" alt="img-vk"></div>
                     </a>
                     <a href="#">
                         <div>
-                            <img src="./media/main11/yout-4.png"></div>
+                            <img src="./media/main11/yout-4.png" alt="img-yout"></div>
                     </a>
                     <a href="#">
                         <div>
-                            <img src="./media/main11/in-5.png"></div>
+                            <img src="./media/main11/in-5.png" alt="img-in"></div>
                     </a>
                     <a href="#">
                         <div>
-                            <img src="./media/main11/digg-6.png"></div>
+                            <img src="./media/main11/digg-6.png" alt="img-digg"></div>
                     </a>
                     <a href="#">
                         <div>
-                            <img src="./media/main11/8.png"></div>
+                            <img src="./media/main11/8.png" alt="img"></div>
                     </a>
                 </div>
             </div>
