--- a/index.html
+++ b/index.html
@@ -403,14 +403,14 @@
             <h2>New York + Paris</h2>
             <h4>7 Day + 6 Night</h4>
             <div class="img">
-                <div>
-                    <img src="./media/main9/plane.png" alt="img-plane">Flight</div>
-                <div>
-                    <img src="./media/main9/building.png" alt="img-building">Hotel</div>
-                <div>
-                    <img src="./media/main9/car.png" alt="img-car">Transport</div>
+                <div class="wr-img-caption">
+                   <div class="img-caption"><img src="./media/main9/plane.png" alt="img-plane"></div><p class="caption">Flight</p></div>
+                <div class="wr-img-caption">
+                    <div class="img-caption"><img src="./media/main9/building.png" alt="img-building"></div><p class="caption">Hotel</p></div>
+                <div class="wr-img-caption">
+                    <div class="img-caption"><img src="./media/main9/car.png" alt="img-car"></div><p class="caption">Transport</p></div>
             </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            <p class="about-tour">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                 labore et dolore magna aliqua.</p>
             <div class="inf-mob"><span>$1000</span>
                 <a href="#">Book now</a>
