--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 </div>
             </form>
         </div>
-    </div>
+        </div>
     </section>
     <section class="wr-aboutus">
         <img class="img-main-left" src="./media/main3/main-left.jpg" alt="
@@ -366,14 +366,14 @@
         <div class="go-exploore">
             <h2>Trusted Since 2001</h2>
             <h3>GO EXPLOORE</h3>
-            <div class="
-            directions">
+            <div class="directions">
                 <div>
                     <img src="./media/main8/first.jpg" alt="img-tour">
                     <div class="info">
                         <a href="#">Click here</a>
                         <p class="headin-first">Lorem Ipsum Dolor</p>
-                        <p class="text-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor
+                        <p class="text-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum
+                            dolor
                             sit amet, consectetur adipiscing elit.</p>
                     </div>
                 </div>
@@ -382,7 +382,8 @@
                     <div class="info">
                         <a href="./grid-page/folder.html">Click here</a>
                         <p class="headin-first">Lorem Ipsum Dolor</p>
-                        <p class="text-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor
+                        <p class="text-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum
+                            dolor
                             sit amet, consectetur adipiscing elit.</p>
                     </div>
                 </div>
@@ -391,7 +392,8 @@
                     <div class="info">
                         <a href="#">Click here</a>
                         <p class="headin-first">Lorem Ipsum Dolor</p>
-                        <p class="text-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor
+                        <p class="text-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum
+                            dolor
                             sit amet, consectetur adipiscing elit.</p>
                     </div>
                 </div>
@@ -404,13 +406,20 @@
             <h4>7 Day + 6 Night</h4>
             <div class="img">
                 <div class="wr-img-caption">
-                   <div class="img-caption"><img src="./media/main9/plane.png" alt="img-plane"></div><p class="caption">Flight</p></div>
+                    <div class="img-caption"><img src="./media/main9/plane.png" alt="img-plane"></div>
+                    <p class="caption">Flight</p>
+                </div>
                 <div class="wr-img-caption">
-                    <div class="img-caption"><img src="./media/main9/building.png" alt="img-building"></div><p class="caption">Hotel</p></div>
+                    <div class="img-caption"><img src="./media/main9/building.png" alt="img-building"></div>
+                    <p class="caption">Hotel</p>
+                </div>
                 <div class="wr-img-caption">
-                    <div class="img-caption"><img src="./media/main9/car.png" alt="img-car"></div><p class="caption">Transport</p></div>
+                    <div class="img-caption"><img src="./media/main9/car.png" alt="img-car"></div>
+                    <p class="caption">Transport</p>
+                </div>
             </div>
-            <p class="about-tour">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            <p class="about-tour">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut
                 labore et dolore magna aliqua.</p>
             <div class="inf-mob"><span>$1000</span>
                 <a href="#">Book now</a>
@@ -440,7 +449,7 @@
                     <label for="star-1" title="Оценка «1»"></label>
                 </div>
                 <div class="wr-castomer">
-                    <img src="./media/main10/castomer.png" alt="img-castomer">
+                    <img src="./media/main10/castomer.jpg" alt="img-castomer">
                     <div class="castomer">
                         <p class="name">John Smith</p>
                         <p class="status">Solo Traveller</p>
@@ -468,7 +477,7 @@
                     <label for="star-1" title="Оценка «1»"></label>
                 </div>
                 <div class="wr-castomer">
-                    <img src="./media/main10/castomer.png" alt="img-castomer">
+                    <img src="./media/main10/castomer.jpg" alt="img-castomer">
                     <div class="castomer">
                         <p class="name">John Smith</p>
                         <p class="status">Solo Traveller</p>
@@ -495,7 +504,7 @@
                     <label for="star-1" title="Оценка «1»"></label>
                 </div>
                 <div class="wr-castomer">
-                    <img src="./media/main10/castomer.png" alt="img-castomer">
+                    <img src="./media/main10/castomer.jpg" alt="img-castomer">
                     <div class="castomer">
                         <p class="name">John Smith</p>
                         <p class="status">Solo Traveller</p>
@@ -582,8 +591,8 @@
     <section class="wr-footer">
         <footer>
             <div>
-                Designed By PSDFreebies.com
-                Copyright 2020 All Right Reserved
+                <p>Designed By PSDFreebies.com</p>
+                <p>Copyright 2020 All Right Reserved</p>
             </div>
         </footer>
     </section>
