--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <section class="bg-promo">
+    <section class="bg-promo" id="top">
         <header>
             <div class="container">
                 <div class="contact-info">
@@ -71,7 +71,7 @@
                                 d="M4,10h24c1.104,0,2-0.896,2-2s-0.896-2-2-2H4C2.896,6,2,6.896,2,8S2.896,10,4,10z M28,14H4c-1.104,0-2,0.896-2,2  s0.896,2,2,2h24c1.104,0,2-0.896,2-2S29.104,14,28,14z M28,22H4c-1.104,0-2,0.896-2,2s0.896,2,2,2h24c1.104,0,2-0.896,2-2  S29.104,22,28,22z" />
                         </svg>
                     </div>
-                    <a class="logo">
+                    <a href="#top" class="logo">
                         <img src="./media/main1/nav/logo.png" src="icon-logo">
                         <p>creative tagline here</p>
                     </a>
