--- a/index.html
+++ b/index.html
@@ -378,14 +378,53 @@
                     </div>
                 </div>
             </div>
+            <div class="slider-container1">
+                <div class="first-tour">
+                    <img src="./media/main7/first.jpg" alt="img-tour">
+                    <div class="info-tour">
+                        <p class="trip-duration">7 Day + 6 Night</p>
+                        <p class="
+            tour-name">New York + Paris</p>
+                        <p class="
+            tour-information">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <p class="tour-cost">$600</p>
+                        <a href="#">book now</a>
+                    </div>
+                </div>
+                <div class="second-tour">
+                    <img src="./media/main7/second.jpg" alt="img-tour">
+                    <div class="info-tour">
+                        <p class="trip-duration">7 Day + 6 Night</p>
+                        <p class="
+            tour-name">New York + Paris</p>
+                        <p class="
+            tour-information">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet,
+                            consectetur </p>
+                        <p class="tour-cost">$1000</p>
+                        <a href="#">book now</a>
+                    </div>
+                </div>
+                <div class="third-tour">
+                    <img src="./media/main7/third.jpg" alt="img-tour">
+                    <div class="info-tour">
+                        <p class="trip-duration">7 Day + 6 Night</p>
+                        <p class="
+            tour-name">New York + Paris</p>
+                        <p class="
+            tour-information">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <p class="tour-cost">$800</p>
+                        <a href="#">book now</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <section class="wr-goexploore">
         <div class="go-exploore">
             <h2>Trusted Since 2001</h2>
             <h3>GO EXPLOORE</h3>
-            <div class="directions">
-                <div>
+            <div class="sl-container">
+                <div class="directions">
                     <img src="./media/main8/first.jpg" alt="img-tour">
                     <div class="info">
                         <a href="#">Click here</a>
@@ -395,7 +434,7 @@
                             sit amet, consectetur adipiscing elit.</p>
                     </div>
                 </div>
-                <div>
+                <div class="directions">
                     <img src="./media/main8/second.jpg" alt="img-tour">
                     <div class="info">
                         <a href="./grid-page/folder.html">Click here</a>
@@ -405,7 +444,7 @@
                             sit amet, consectetur adipiscing elit.</p>
                     </div>
                 </div>
-                <div>
+                <div  class="directions">
                     <img src="./media/main8/third.jpg" alt="img-tour">
                     <div class="info">
                         <a href="#">Click here</a>
