--- a/index.html
+++ b/index.html
@@ -53,12 +53,14 @@
                             <a href="#"><img src="./media/main1/nav/yout.png" alt="icon-yout"></a>
                         </div>
                         <div class="login">
+                            <a href="#">
                             <img src="./media/main1/nav/man.png" alt="icon-login">
-                            <a href="#">Login</a>
+                            Login</a>
                         </div>
                         <div class="sign-up">
+                            <a href="./second-page/folder.html">
                             <img src="./media/main1/nav/key.png" alt="icon-key">
-                            <a href="./second-page/folder.html">Sign up</a>
+                            Sign up</a>
                         </div>
                     </div>
                 </div>
@@ -384,7 +386,7 @@
         <div class="go-exploore">
             <h2>Trusted Since 2001</h2>
             <h3>GO EXPLOORE</h3>
-            <div class="directions">
+            <div class="directions sl-container1">
                 <div>
                     <img src="./media/main8/first.jpg" alt="img-tour">
                     <div class="info">
@@ -406,6 +408,39 @@
                     </div>
                 </div>
                 <div>
+                    <img src="./media/main8/third.jpg" alt="img-tour">
+                    <div class="info">
+                        <a href="#">Click here</a>
+                        <p class="headin-first">Lorem Ipsum Dolor</p>
+                        <p class="text-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum
+                            dolor
+                            sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+            <div class="sl-container">
+                <div class="directions">
+                    <img src="./media/main8/first.jpg" alt="img-tour">
+                    <div class="info">
+                        <a href="#">Click here</a>
+                        <p class="headin-first">Lorem Ipsum Dolor</p>
+                        <p class="text-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum
+                            dolor
+                            sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                </div>
+                <div class="directions">
+                    <img src="./media/main8/second.jpg" alt="img-tour">
+                    <div class="info">
+                        <a href="./grid-page/folder.html">Click here</a>
+                        <p class="headin-first">Lorem Ipsum Dolor</p>
+                        <p class="text-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum
+                            dolor
+                            sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                </div>
+                <div  class="directions">
                     <img src="./media/main8/third.jpg" alt="img-tour">
                     <div class="info">
                         <a href="#">Click here</a>
@@ -479,9 +514,7 @@
                 <h3>We are Travel Agent</h3>
                 <div class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur.”</div>
+                    et dolore magna aliqua.”</div>
                 <div class="rating-area">
                     <input type="radio" id="star-5" name="rating" value="5">
                     <label for="star-5" title="Оценка «5»"></label>
