--- a/index.html
+++ b/index.html
@@ -269,7 +269,44 @@
         <div class="container">
             <h2>Trusted Since 2001</h2>
             <h3>We are Travel Agent</h3>
-            <div class="tourcost">
+            <div class="tourcost tourcost-sl">
+                <div class="lowbudget">
+                    <div class="icon">
+                        <img src="./media/main5/car.png" alt="img-car">
+                    </div>
+                    <p>Low Budget Trip</p>
+                    <div class="cost"><span>500$</span></div>
+                    <ul>
+                        <li><img src="./media/main5/check.png" alt="img-check"> Lorem ipsum dolor</li>
+                        <li><img src="./media/main5/check.png" alt="img-check"> Sit amet consect</li>
+                        <li><img src="./media/main5/check.png" alt="img-check"> Eturadipiscing elit</li>
+                        <li><img src="./media/main5/check.png" alt="img-check"> Psum dolor</li>
+                    </ul>
+                </div>
+                <div class="midbudget">
+                    <div class="icon"><img src="./media/main5/train.png" alt="train"></div>
+                    <p>Mid Budget Trip</p>
+                    <div class="cost">800$</div>
+                    <ul>
+                        <li><img src="./media/main5/check.png" alt="img-check"> Lorem ipsum dolor</li>
+                        <li><img src="./media/main5/check.png" alt="img-check"> Sit amet consect</li>
+                        <li><img src="./media/main5/check.png" alt="img-check"> Eturadipiscing elit</li>
+                        <li><img src="./media/main5/check.png" alt="img-check"> Psum dolor</li>
+                    </ul>
+                </div>
+                <div class="highbudget">
+                    <div class="icon"><img src="./media/main5/plane.png" alt="img-plane"></div>
+                    <p>High Budget Trip</p>
+                    <div class="cost">1000$</div>
+                    <ul>
+                        <li><img src="./media/main5/check.png" alt="img-check"> Lorem ipsum dolor</li>
+                        <li><img src="./media/main5/check.png" alt="img-check"> Sit amet consect</li>
+                        <li><img src="./media/main5/check.png" alt="img-check"> Eturadipiscing elit</li>
+                        <li><img src="./media/main5/check.png" alt="img-check"> Psum dolor</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="sl-tourcost tourcost">
                 <div class="lowbudget">
                     <div class="icon"><img src="./media/main5/car.png" alt="img-car"></div>
                     <p>Low Budget Trip</p>
